--- a/src/views/scent/Scent.module.css
+++ b/src/views/scent/Scent.module.css
@@ -23,22 +23,33 @@ p {
 }
 
 .circle-container {
-  padding: 5rem 10rem;
+  padding: 1rem 10rem;
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.brand1 {
+  display: flex;
+  flex-direction: column;
 }
 
 .circle {
-  width: 10rem;
-  height: 10rem;
+  width: 8rem;
+  height: 8rem;
   border-radius: 50%;
   background-color: #fff;
   border: 1px solid #000;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 5px; /* 각 원 사이의 간격 조절 */
+  margin: 1rem; /* 각 원 사이의 간격 조절 */
   font-size: 18px;
   font-weight: bold;
+  cursor: pointer;
+}
+.brand {
+
 }
 
 .title {
