--- a/src/views/Home.module.css
+++ b/src/views/Home.module.css
@@ -1,6 +1,11 @@
+.main-page {
+  height: 100%;
+}
 .main {
   display: flex;
   flex-direction: row;
+  justify-content: center; /* 수평 가운데 정렬 */
+  align-items: center;
   }
 
   .left-section,
@@ -22,7 +27,10 @@
     padding: 0.5rem 3rem;
     position: relative;
     top: -8rem;
-    left: 54.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
   }
 /* 
   {`
