--- a/src/views/scent/Scent.module.css
+++ b/src/views/scent/Scent.module.css
@@ -29,6 +29,9 @@ p {
   justify-content: center;
   align-items: center;
 }
+.brand {
+  font-family: 'AppleSDGothicNeoB';
+}
 .brand1 {
   display: flex;
   flex-direction: column;
@@ -38,7 +41,7 @@ p {
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: transparent;
   border: 1px solid #000;
   display: flex;
   align-items: center;
@@ -48,9 +51,13 @@ p {
   font-weight: bold;
   cursor: pointer;
 }
-.brand {
-
+.circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
 }
+
 
 .title {
   font-family: 'AppleSDGothicNeoB';
