--- a/front/src/views/Detail.module.css
+++ b/front/src/views/Detail.module.css
@@ -1,11 +1,11 @@
 .amain{
-    margin-top: 83.8px;
+    margin-top: 10%;
+    margin-bottom: 5%;
 }
 
 .brandimg{
     width: 500px;
-    margin-left: 10%;
-    margin-right: 5%;
+    margin-top: 5%;
 }
 .dtitle{
     margin: 5%;
@@ -42,8 +42,6 @@
 .aimg{
     width: 250px;
     margin-left: 5%;
-    margin-top: -170%;
-
 
 }
 .jb {
@@ -65,6 +63,6 @@
     font-family: 'AppleSDGothicNeoB';
 
 }
-.add{
-    margin-left: 33%;
-}
+/* .add{
+    margin-left: 37%;
+} */
