--- a/front/src/views/scent/Scent.module.css
+++ b/front/src/views/scent/Scent.module.css
@@ -30,54 +30,5 @@ p {
   align-items: center;
 }
 .brand {
-  font-family: 'AppleSDGothicNeoB';
-}
-.brand1 {
-  display: flex;
-  flex-direction: column;
-}
-
-.circle {
-  width: 8rem;
-  height: 8rem;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1rem; /* 각 원 사이의 간격 조절 */
-  font-size: 18px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.circle img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-}
-
-
-.title {
-  font-family: 'AppleSDGothicNeoB';
-}
-.text {
-  text-align: left;
-}
-
-.btn {
-  background-color: #000;
-  border-radius: 0;
-  width: 100%;
-  margin-top: 1rem;
-  font-family: 'AppleSDGothicNeoB';
-}
-.btn:hover, .btn:focus {
-  cursor: pointer;
-  background-color: #000 !important;
-  color: #fff;
-}
-.scents {
-  padding: 5rem 10rem;
+  font-family: 'AppleSDGothicNeoL';
 }
