로그인/회원가입 구현 완

--- a/front/src/components/Layout/Layout.module.css
+++ b/front/src/components/Layout/Layout.module.css
@@ -85,8 +85,9 @@ nav a {
 }
 
 .shoppingbag {
-  width: 45%;
-  padding: 5% 0% 0% 0%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 
 .my {
