담기 누르면 장바구니로 이동

--- a/front/src/views/About.module.css
+++ b/front/src/views/About.module.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'AppleSDGothicNeoB';
+}
 .amain{
     margin-top: 83.8px;
 }
@@ -62,6 +65,7 @@
 
 .perfumename {
     text-align: center;
+    margin-bottom: 2rem;
 }
 .perfumeimg,
 .noteimg,
