--- a/front/src/views/cart/Cart.module.css
+++ b/front/src/views/cart/Cart.module.css
@@ -1,23 +1,59 @@
 .container {
   padding: 15rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 h1 {
   font-family: 'AppleSDGothicNeoB';
+  margin-bottom: 3rem;
 }
 .btn {
-  background-color: #000;
+  background-color: #fff;
+  border: #000 1px solid;
+  color: #000;
   border-radius: 0;
   width: 100%;
   margin-top: 1rem;
   font-family: 'AppleSDGothicNeoB';
+}
+.btn1 {
+  background-color: #000;
+  color: #fff;
+  border-radius: 0;
+  width: 80rem;
+  font-family: 'AppleSDGothicNeoB';
+  margin-top: 1rem;
+}
+.btn:hover, .btn:focus, .btn:active {
+  background-color: #fff !important;
+  border: #000 1px solid !important;
+  color: #000 !important;
+}
+.btn1:hover, .btn1:focus, .btn1:active {
+  background-color: #000 !important;
+  color: #fff !important;
 }
 .title {
   font-family: 'AppleSDGothicNeoB';
 }
 .text {
   text-align: left;
-}   
+}  
+.img {
+  width: 10rem;
+} 
+.card {
+  width: 80rem;
+} 
+
+.btn2 {
+  background-color: #000;
+  color: #fff;
+}
+.btn2:hover, .btn2:focus, .btn2:active {
+  background-color: #000;
+  color: #fff;
+}
