--- a/front/src/views/Home.module.css
+++ b/front/src/views/Home.module.css
@@ -76,3 +76,9 @@
   cursor: pointer;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
 }
+
+.p1 {
+  margin-top: 3rem;
+  font-size: 1rem;
+  color: red;
+}
