--- a/front/src/views/Home.module.css
+++ b/front/src/views/Home.module.css
@@ -68,6 +68,7 @@
 }
 .aiBtn {
   border-radius: 10rem;
+  color: #000;
   width: 10rem;
   font-size: 20px;
   border: 2px solid #000;
@@ -76,9 +77,48 @@
   cursor: pointer;
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
 }
+.aiBtn:hover, .aiBtn:focus {
+  color: #000;
+  background-color: #fff;
+  border: 2px solid #000;
+}
+
 
 .p1 {
   margin-top: 3rem;
   font-size: 1rem;
   color: red;
+}
+
+.title {
+  font-family: 'AppleSDGothicNeoB';
+  text-align: left;
+}
+.text {
+  text-align: left;
+}
+.scents {
+  display: flex;
+  flex-direction: row;
+}
+.btn {
+  background-color: #fff;
+  color: #000;
+  border: #000 solid 0.5px;
+  border-radius: 0;
+  width: 100%;
+  margin-top: 1rem;
+  font-family: 'AppleSDGothicNeoB';
+}
+.btn:hover {
+  cursor: pointer;
+  background-color: #000 !important;
+  color: #fff;
+}
+.perfumeresult {
+  margin: 3rem;
+}
+
+.row {
+  padding: 5rem;
 }
