장바구니 수정 완료 및 가격 천단위 쉼표

--- a/front/src/views/Detail.module.css
+++ b/front/src/views/Detail.module.css
@@ -63,6 +63,10 @@
     font-family: 'AppleSDGothicNeoB';
 
 }
-/* .add{
-    margin-left: 37%;
-} */
+.add{
+    margin-top: 15px;
+
+}
+.quantity{
+    padding:10px;
+}
