--- a/front/src/views/cart/Cart.module.css
+++ b/front/src/views/cart/Cart.module.css
@@ -1,8 +1,8 @@
 .container {
-  padding: 15rem;
-  display: flex;
+  margin-top: 18%;
+  margin-bottom: 15%;
+    display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
 }
 
@@ -56,3 +56,44 @@ h1 {
   background-color: #000;
   color: #fff;
 }
+.quantity{
+  padding:10px;
+}
+
+.selectAllRow {
+  display: flex;
+  text-align: left;
+  margin-bottom: 1rem;
+  flex-direction: column;
+  margin-bottom: 1rem; /* 아래 간격 조절 */
+  padding: 0% 0% 0% 1%;
+
+}
+.shop{
+  text-align: center;
+}
+.totalAmountLabel{
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.selectButton {
+  display: flex;
+  align-items: center; /* 세로 중앙 정렬을 위해 추가 */
+}
+
+.selectButton span {
+  margin-left: 8px; /* 체크 박스와의 간격 조절을 위해 추가 */
+}
+
+/* Checkbox에 적용할 스타일 */
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: #000; /* 선택된 상태의 배경 색상을 원하는 색상으로 변경 */
+  border-color: #000; /* 선택된 상태의 테두리 색상을 원하는 색상으로 변경 */
+}
+
+.custom-checkbox .custom-control-label::before {
+  border-color: #000; /* 선택되지 않은 상태의 테두리 색상을 원하는 색상으로 변경 */
+}
+
+
