--- a/front/src/views/Home.module.css
+++ b/front/src/views/Home.module.css
@@ -100,7 +100,7 @@
 
 .p1 {
   margin-top: 3rem;
-  font-size: 1rem;
+  font-size: 20px;
   color: red;
 }
 
@@ -132,4 +132,57 @@
 
 .row {
   padding: 5rem;
+}
+p {
+  font-size: 20px;
+}
+
+.circle-spinner {
+  position: relative;
+  width: 100%;
+  height: 5rem;
+}
+
+.circle-spinner .spinner {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  animation: rotate 2s linear infinite;
+}
+
+.circle-spinner .spinner:nth-child(1) {
+  top: 0;
+  left: 50%;
+  transform-origin: 0 50%;
+  animation-delay: -1.5s;
+}
+
+.circle-spinner .spinner:nth-child(2) {
+  top: 50%;
+  left: 100%;
+  transform-origin: 100% 0;
+  animation-delay: -1s;
+}
+
+.circle-spinner .spinner:nth-child(3) {
+  top: 100%;
+  left: 50%;
+  transform-origin: 100% 100%;
+  animation-delay: -0.5s;
+}
+
+.circle-spinner .spinner:nth-child(4) {
+  top: 50%;
+  left: 0;
+  transform-origin: 0 100%;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
