--- a/front/src/views/Home.module.css
+++ b/front/src/views/Home.module.css
@@ -141,48 +141,47 @@ p {
   position: relative;
   width: 100%;
   height: 5rem;
+  z-index: 100000;
 }
-
-.circle-spinner .spinner {
-  position: absolute;
-  width: 30px;
-  height: 30px;
+.loader {
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
-  animation: rotate 2s linear infinite;
+  display: block;
+  margin:15px auto;
+  position: relative;
+  color: #000;
+  left: -100px;
+  box-sizing: border-box;
+  animation: shadowRolling 2s linear infinite;
 }
 
-.circle-spinner .spinner:nth-child(1) {
-  top: 0;
-  left: 50%;
-  transform-origin: 0 50%;
-  animation-delay: -1.5s;
-}
-
-.circle-spinner .spinner:nth-child(2) {
-  top: 50%;
-  left: 100%;
-  transform-origin: 100% 0;
-  animation-delay: -1s;
-}
-
-.circle-spinner .spinner:nth-child(3) {
-  top: 100%;
-  left: 50%;
-  transform-origin: 100% 100%;
-  animation-delay: -0.5s;
-}
-
-.circle-spinner .spinner:nth-child(4) {
-  top: 50%;
-  left: 0;
-  transform-origin: 0 100%;
-}
-
-@keyframes rotate {
+@keyframes shadowRolling {
   0% {
-    transform: rotate(0);
+    box-shadow: 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  }
+  12% {
+    box-shadow: 100px 0 #000, 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  }
+  25% {
+    box-shadow: 110px 0 #000, 100px 0 #000, 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  }
+  36% {
+    box-shadow: 120px 0 #000, 110px 0 #000, 100px 0 #000, 0px 0 rgba(255, 255, 255, 0);
+  }
+  50% {
+    box-shadow: 130px 0 #000, 120px 0 #000, 110px 0 #000, 100px 0 #000;
+  }
+  62% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 130px 0 #000, 120px 0 #000, 110px 0 #000;
+  }
+  75% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 130px 0 #000, 120px 0 #000;
+  }
+  87% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 130px 0 #000;
   }
   100% {
-    transform: rotate(360deg);
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0);
   }
 }
