scent페이지 클릭이벤트 수정 및 about 사진 크기 수정

--- a/front/src/views/About.module.css
+++ b/front/src/views/About.module.css
@@ -82,10 +82,21 @@
 .showerimg{
     display: block;
     margin: 0px auto;
+
 }
 .perfumeimg{
     margin-top: -10%;
 
+}
+.noteimg{
+    width: 420px;
+
+}
+.edpimg,
+.edcimg,
+.edtimg,
+.showerimg{
+    width:380px;
 }
 .cont{
     font-size: 20px;
