--- a/front/src/views/scent/Scent.module.css
+++ b/front/src/views/scent/Scent.module.css
@@ -87,3 +87,23 @@ p {
 .mb4 {
   margin-bottom: 3rem;
 }
+.loadMoreButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5rem;
+}
+.btn1 {
+  background-color: #fff;
+  color: #000;
+  border: #000 solid 0.5px;
+  border-radius: 0;
+  margin-top: 1rem;
+  width: 30rem;
+  font-family: 'AppleSDGothicNeoB';
+}
+.btn1:hover {
+  cursor: pointer;
+  background-color: #000 !important;
+  color: #fff;
+}
