p 폰트 사이즈 조절

--- a/front/src/views/cart/Cart.module.css
+++ b/front/src/views/cart/Cart.module.css
@@ -5,6 +5,9 @@
   flex-direction: column;
   justify-content: flex-start;
 }
+.p2 {
+  font-size: 20px;
+}
 
 h1 {
   font-family: 'AppleSDGothicNeoB';
