--- a/front/src/views/Home.module.css
+++ b/front/src/views/Home.module.css
@@ -104,6 +104,7 @@
   color: red;
 }
 
+
 .title {
   font-family: 'AppleSDGothicNeoB';
   text-align: left;
@@ -133,7 +134,7 @@
 .row {
   padding: 5rem;
 }
-p {
+.p2 {
   font-size: 20px;
 }
 
