--- a/front/src/views/Mypage.module.css
+++ b/front/src/views/Mypage.module.css
@@ -35,11 +35,12 @@ h2 {
 
 .text {
   text-align: left;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .card {
-  width: 30rem;
+  width: 50rem;
+  margin-bottom: 1rem;
 }
 .justify-content-md-center {
   display: flex;
@@ -47,4 +48,38 @@ h2 {
 }
 .col {
   margin-bottom: 3rem;
+}
+.img1 {
+  width: 8rem;
+  border: 1px #e0e0e0 solid;
+  border-radius: 5px;
+}
+.order {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.card-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.navigation {
+  width: 10rem;
+  border: 1px #e0e0e0 solid;
+  border-radius: 5px;
+  padding: 1rem;
+  height: fit-content;
+}
+.nav {
+  color: #636363;
+  font-family: 'AppleSDGothicNeoL';
+}
+.nav:hover {
+  color: #000;
+}
+.hr {
+  margin-top: 3rem;
 }
