사용자id에 따른 주문내역

--- a/front/src/views/Mypage.module.css
+++ b/front/src/views/Mypage.module.css
@@ -39,6 +39,7 @@ h2 {
 }
 
 .card {
+  padding: 1rem;
   width: 50rem;
   margin-bottom: 1rem;
 }
@@ -50,9 +51,10 @@ h2 {
   margin-bottom: 3rem;
 }
 .img1 {
-  width: 8rem;
+  width: 10rem;
   border: 1px #e0e0e0 solid;
   border-radius: 5px;
+  margin-right: 1rem;
 }
 .order {
   display: flex;
@@ -82,4 +84,15 @@ h2 {
 }
 .hr {
   margin-top: 3rem;
+}
+.p1 {
+  text-align: left;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.order-block {
+  margin-bottom: 20px;
 }
